--- a/client/src/components/auth/auth.css
+++ b/client/src/components/auth/auth.css
@@ -1,6 +1,3 @@
-/* auth.css */
-
-/* General container for the page */
 .auth-container {
     display: flex;
     flex-direction: column;
@@ -10,8 +7,6 @@
     font-family: "Arial", sans-serif;
     color: #fff;
   }
-  
-  /* Form container */
   .auth-container form {
     background-color: #ffffff;
     color: #333;
@@ -22,15 +17,11 @@
     width: 100%;
     text-align: center;
   }
-  
-  /* Form title */
   .auth-container h2 {
     margin-bottom: 20px;
     font-size: 28px;
     color:#333;
   }
-  
-  /* Input fields styling */
   .auth-container input {
     width: calc(100% - 12px);
     padding: 12px;
@@ -46,7 +37,7 @@
     border-color: #6c63ff;
   }
   
-  /* Error message */
+  
   .auth-container .error {
     color: #ff5252;
     font-size: 14px;
@@ -54,7 +45,7 @@
     text-align: center;
   }
   
-  /* Submit button styling */
+  
   .auth-container button {
     width: 100%;
     padding: 12px;
@@ -77,7 +68,7 @@
     transform: scale(0.98);
   }
   
-  /* Add some spacing for better structure */
+  
   .auth-container form input:last-child {
     margin-bottom: 20px;
   }
@@ -103,10 +94,10 @@
     top: 50%;
     right: 0px;
     transform: translateY(-50%);
-    font-size: 20px; /* Adjust the size of the emoji */
+    font-size: 20px; 
     cursor: pointer;
   }
-/* Media Query for mobile screens */
+
 @media (max-width: 768px) {
   .auth-container h2 {
     font-size: 24px;
