--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -62,48 +62,48 @@
 
 @media (max-width: 768px) {
   .tagline-section {
-    height: auto; /* Adjust height for better readability */
-    padding: 20px; /* Add some padding for smaller screens */
-    flex-direction: column; /* Stack elements vertically */
+    height: auto; 
+    padding: 20px; 
+    flex-direction: column; 
     text-align: center;
     align-items: center;
   }
 
   .tagline-content h1 {
-    font-size: 2.5rem; /* Smaller font size for mobile */
+    font-size: 2.5rem; 
     margin-bottom: 10px;
     margin-top: 0px;
   }
 
   .tagline-content p {
-    font-size: 1rem; /* Adjust font size for better readability */
+    font-size: 1rem; 
     margin-bottom: 15px;
   }
 
   .cta-button {
-    font-size: 1.3rem; /* Reduce button size */
-    padding: 8px 16px; /* Adjust padding */
+    font-size: 1.3rem; 
+    padding: 8px 16px; 
   }
 
   .hot-deals {
     margin-top: 20px;
-    margin-bottom: 20px; /* Reduce bottom margin */
+    margin-bottom: 20px; 
   }
 
   .hot-deals h2 {
-    font-size: 1.5rem; /* Adjust font size */
+    font-size: 1.5rem; 
     margin-bottom: 15px;
   }
 
   .hot-deals-list {
-    gap: 12px; /* Reduce gap between cards */
-    justify-content: center; /* Ensure items stay centered */
+    gap: 12px; 
+    justify-content: center; 
   }
 
   .hot-deals-list .item-card {
-    width: 150px; /* Reduce card width for smaller screens */
+    width: 150px; 
     height: 300px;
-    margin: 8px; /* Adjust margins */
+    margin: 8px; 
   }
   .item-description{
     display: none;
