--- a/client/src/components/auth/auth.css
+++ b/client/src/components/auth/auth.css
@@ -57,6 +57,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.2);
   }
   
   .auth-container button:hover {
@@ -97,6 +98,33 @@
     font-size: 20px; 
     cursor: pointer;
   }
+.bg-logo {
+  position: absolute;
+  inset: 0;
+  background: url("C:\Users\Vishal\Desktop\webd\backup\cartify-app\client\src\assets\logo.svg") no-repeat center center;
+  background-size: 65%;
+  opacity: 0.8;
+  filter: blur(1px);
+  z-index: -1;
+}
+.brand-title {
+  font-size: 4rem;
+  font-weight: 700;
+  color: rgb(31, 110, 156);
+  margin-bottom:10px;
+  margin-top: -10px;
+}
+.title-container{
+  margin-bottom: 5%;
+  text-align: center;
+}
+
+
+.tagline {
+  font-size: 0.9rem;
+  color: #6c63ff;
+  margin-bottom: 1.2rem;
+}
 
 @media (max-width: 768px) {
   .auth-container h2 {
